add comment to html file showing where dynamic elements should go

--- a/movies/index.html
+++ b/movies/index.html
@@ -21,6 +21,9 @@
             </tr>
         </thead>
         <tbody>
+            <!--use JavaScript to add one tr element per distinct genre 
+            inside that tr, add two td element, one for the genre
+            and one for the average gross sales for that genre -->
         </tbody>
     </table>
 
