--- a/movies/index.html
+++ b/movies/index.html
@@ -26,7 +26,8 @@
             and one for the average gross sales for that genre -->
         </tbody>
     </table>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
     <script src="data/movies-2015.js"></script>
     <script src="js/app.js"></script>
 </body>
