--- a/character/index.html
+++ b/character/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="An introduction to Superman">
-    <meta name="keywords" content="HTML,CSS">
+    <meta name="keywords" content="Superman">
     <meta name="author" content="Rajat Sethi">
     <title>Superman</title>
     <link rel="stylesheet" href="css/index.css">
