--- a/responsive/index.html
+++ b/responsive/index.html
@@ -57,7 +57,7 @@
 				<img src="img/panda.jpg">
 			</div>
 
-			<div class="col-sm-6" id="description">
+			<div class="descr">
 				<h2 class="creative">Unleash Your Creative Potential</h2>
 
 				<p class="Learn">Attend one of our free workshops to learn how to use Pencil to its fullest potential!</p>
