committing for challenge 3

--- a/movies/index.html
+++ b/movies/index.html
@@ -20,10 +20,23 @@
                 <th class="text-right">Average Tickets Sold</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id = "gross-genre">
             <!--use JavaScript to add one tr element per distinct genre 
             inside that tr, add two td element, one for the genre
             and one for the average gross sales for that genre -->
+        </tbody>
+    </table>
+    <!--Extra credit steps-->
+    <h2>Average tickets sold by rating</h2>
+    <table class="table tickets-by-rating">
+        <thead>
+            <tr>
+                <th>Rating</th>
+                <th class="text-right">Average Tickets Sold</th>
+            </tr>
+        </thead>
+        <tbody id = "tickets-rating">
+            
         </tbody>
     </table>
     
