changing the name of column in first table

--- a/movies/index.html
+++ b/movies/index.html
@@ -17,7 +17,7 @@
         <thead>
             <tr>
                 <th>Genre</th>
-                <th class="text-right">Average Tickets Sold</th>
+                <th class="text-right">Average Gross Sales</th>
             </tr>
         </thead>
         <tbody id = "gross-genre">
